# agent-trading

./: .env_example  .gitignore  .replit  MomentumRejection.html  Procfile  README.md  TrendReversal.html  VengeanceTrend.html  pyproject.toml  replit.nix  requirements.txt
.github/workflows/: codeql.yml
data/rbi/backtests/: backtest_DC_20250124_062546.py
data/rbi/backtests_final/: backtest_final_DC_20250123_144532.py  backtest_final_DC_20250124_062407.py  backtest_final_DC_20250124_062546.py
data/rbi/research/: strategy_DC_20250123_144532.txt  strategy_DC_20250123_144735.txt  strategy_DC_20250124_062407.txt  strategy_DC_20250124_062546.txt  strategy_DC_20250124_062710.txt
src/: .env_example  main.py
src/agents/: README.md  api.py  chat_agent.py  chat_agent_og.py  coingecko_agent.py  copybot_agent.py  focus_agent.py  funding_agent.py  fundingarb_agent.py  liquidation_agent.py  listingarb_agent.py  new_or_top_agent.py  rbi_agent.py  risk_agent.py  tweet_agent.py  video_agent.py  whale_agent.py
src/data/: agent_discussed_tokens.csv  ai_analysis_buys.csv  liquidation_history.csv  oi_history.csv
src/data/coingecko_results/: ai_picks.csv  new_coins.csv  top_gainers_losers.csv
src/data/rbi/: ideas.txt  (+1 more)
src/frontend/: main.py
src/models/: README.md  __init__.py  base_model.py  claude_model.py  deepseek_model.py  gemini_model.py  groq_model.py  model_factory.py  openai_model.py
src/scripts/: coingecko_examples.py  coingecko_exchangeless_tokens.py  deepseek_api.py  deepseek_local_call.py  lambda_vs_local.py  lower_ai_token_amount.py  openlinks_intabs.py
(+129 files in other folders)
