[tool.poetry]
name = "moon-dev-rbi-agent"
version = "0.1.0"
description = "Moon Dev's RBI Agent for Trading"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.2"
uvicorn = "0.21.1"
python-multipart = "0.0.6"
jinja2 = "3.1.2"
python-dotenv = "^1.0.0"
PyPDF2 = "^3.0.0"
pandas = "^2.1.0"
termcolor = "^2.3.0"
requests = "^2.31.0"
numpy = "^1.24.0"
pandas-ta = "^0.3.14b0"
solders = "^0.19.0"
schedule = "^1.2.0"
python-dateutil = "^2.8.2"
backoff = "2.2.1"
youtube-transcript-api = "^0.6.2"
openai = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 